deployment-kuard.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    annotations:
        deployment.kubernetes.io/revision: "1"
    creationTimestamp: null
    generation: 1
    labels:
        run: kuard
    name: kuard
    selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/kuard
spec:
    progressDeadlineSeconds: 2147483647
    replicas: 2
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            run: kuard
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            creationTimestamp: null
            labels:
                run: kuard
        spec:
            containers:
            -   image: gcr.io/kuar-demo/kuard-amd64:blue
                imagePullPolicy: IfNotPresent
                name: kuard
                resources: {}
                terminationMessagePath: /dev/termination-log
                terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 30
status: {}
