pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  nodeName: worker1
  
  volumes:
      - name: "kuard-data"
        nfs:
            server: my.nfs.server.local # hostname or IP address of the NFS server
            path: "/exports" # specifies the folder path on the NFS server
              
      - name: "local-data"
        hostPath:
          path: "/path/on/worker/node"
        
  containers:
  
      - name: container
      
        image: gcr.io/kuar-demo/kuard-amd64:blue
        
        imagePullPolicy: IfNotPresent
        
        ports: # defines how the container exposes itself to the external network
          - containerPort: 8080
            name: http
            protocol: TCP
        
        resources:
            requests: # min
                cpu: "500m"
                memory: "128Mi"
            limits: # max
                cpu: "1000m"
                memory: "256Mi"
        
        volumeMounts:
          - mountPath: "/data"  # destination folder inside the container
            name: "kuard-data"
            
        livenessProbe:
            httpGet:
                path: /healthy
                port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3

        readinessProbe:
            httpGet:
                path: /ready
                port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
