pod1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
    - name: container-pod1
      image: muzo4
      imagePullPolicy: IfNotPresent
