pod2.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  nodeName: worker1
  containers:
    - name: container-pod2
      image: muzo4
      imagePullPolicy: IfNotPresent
