ingress1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress1
spec:
    rules:
    - host: bandicoot.example.com
      http:
        paths:
        - path: "/"
          backend:
            serviceName: bandicoot
            servicePort: 8080
        - path: "/a/"
          backend:
            serviceName: alpaca
            servicePort: 8080
